--- a/app/views/restaurantes/index.html.erb
+++ b/app/views/restaurantes/index.html.erb
@@ -6,6 +6,7 @@
   <thead>
     <tr>
       <th>Name</th>
+      <th>Total de produtos</th>
       <th>Address</th>
       <th colspan="3"></th>
     </tr>
@@ -15,6 +16,7 @@
     <% @restaurantes.each do |restaurante| %>
       <tr>
         <td><%= restaurante.name %></td>
+        <td><%= restaurante.total_producto %></td>
         <td><%= restaurante.address %></td>
         <td><%= link_to 'Show', restaurante %></td>
         <td><%= link_to 'Edit', edit_restaurante_path(restaurante) %></td>
