--- a/app/views/home/_customer.html.erb
+++ b/app/views/home/_customer.html.erb
@@ -16,8 +16,12 @@
         <tbody>
           <%restaurante.products.each do |product|%>
             <tr>
-              <td>---><%=product.name rescue nil%></td>
-              <td><%=product.valor rescue nil%></td>
+              <%= form_tag('/orders') do %>
+                <%=hidden_field_tag :product_id, product.id %>
+                <td>---><%=product.name rescue nil%></td>
+                <td><%=product.valor rescue nil%></td>
+                <td><%= submit_tag 'Pedir' %></td>
+              <% end %>
             </tr>
           <% end %>
         </tbody>
